cleanup after 0-2 release

--- a/Makefile.local
+++ b/Makefile.local
@@ -18,7 +18,7 @@
 ## Makefile itself, Makefile.local, the *.spec file, and anything listed in 
 ## $(FILES_LOCAL).
 # FILES_LOCAL = usr etc
-FILES_LOCAL = usr make-rpm Makefile Makefile.PL lib
+FILES_LOCAL = usr make-rpm Makefile lib
 
 ## When creating the local 
 # TAR_EXCLUDE = --exclude *.bak --exclude .git
