pretty much ready to go, except we still don't know how to work with ritms + requests

--- a/t/Makefile
+++ b/t/Makefile
@@ -95,5 +95,8 @@ ritm-reopen:
 #########################################################################
 
 request-new:
-	@echo "Testing" | /usr/bin/snow-ticket-create --subject testing \
+	@echo "Testing" | /usr/bin/snow-request-create --subject testing \
 		--type request --group ECF-CIS --ticket new-cis-request.yaml --debug
+	
+request:
+	@ ../usr/bin/snow-ticket $(REQ) --debug
