--- a/t/new-cis-request.yaml
+++ b/t/new-cis-request.yaml
@@ -1,6 +1,37 @@
 ## This ticket is a good start for creating tickets for the CIS team.
 
 ticket:
-    assignment_group:       'ECF-CIS'
-    group:                  'ECF-CIS'
-    short_description:      '(no subject)'
+#    requested_for: '
+#    active: '1'
+#    made_sla: '1'
+#    approval:               'approved'
+#    upon_approval: 'proceed'
+#    upon_reject: 'cancel'
+#    sys_domain: 'global'
+#    contact_type:           'phone'
+#    delivery_address:       '(empty)'
+#    group:                  'Req holding group'
+#    due_date:               '2015-05-12 06:19:33'
+#    priority:               '3'
+#    request_state:          'in_process'
+#    stage:                  'requested'
+#    u_itil_state:           'Approved'
+#    u_request_description:  '(no subject)'
+#    u_request_type:         'User Service Request'
+#    urgency:                '3'
+
+## This ticket is a good start for creating tickets for the CIS team.
+
+# ticket:
+#     assignment_group:       'ECF-CIS'
+#     group:                  'ECF-CIS'
+#     impact:                 '4'
+#     short_description:      '(no subject)'
+#     u_categorization:       'Hardware -- Server -- Linux'
+#     u_item:                 'Linux'
+#     u_operational_category: 'Break/Fix'
+#     u_page_primary:         '0'
+#     u_reported_source:      'Event Monitoring'
+#     urgency:                '4'
+#     u_service:              'Scientific Services'
+#     u_service_type:         'Server'
