test suite improvements for the new world; unassign actually does people right now

--- a/t/Makefile
+++ b/t/Makefile
@@ -1,36 +1,47 @@
-INCIDENT?= 'INC520944'
+INCIDENT?= 'INC000000802824'
+GROUP?= 'SSI Internal'
+USER?= 'tskirvin'
+
+default: ticket-list
 
 ticket-new:
+	@echo "new"
 	@echo "Testing" | ../usr/bin/snow-ticket-create --subject testing \
-		--group ECF-CIS --ticket new-cis-ticket.yaml
+		--group $(GROUP) --ticket new-cis-ticket.yaml
 
 ticket-list:
-	@ ../usr/bin/snow-ticket-list -g ECF-CIS
+	@echo "list"
+	@ ../usr/bin/snow-ticket-list -g $(GROUP)
 
 ticket:
+	@echo "ticket"
 	@ ../usr/bin/snow-ticket $(INCIDENT)
 
 ticket-journal:
+	@echo "adding journal"
 	@ ../usr/bin/snow-ticket-journal $(INCIDENT) 'testing again'
 
 ticket-assign:
-	@ ../usr/bin/snow-ticket-assign $(INCIDENT) -u tskirvin -g ECF-CIS
+	@echo "assigning"
+	@ ../usr/bin/snow-ticket-assign $(INCIDENT) -u $(USER) -g $(GROUP)
 
 ticket-unassign:
+	@echo "unassign"
 	@ ../usr/bin/snow-ticket-unassign $(INCIDENT)
 
 ticket-resolve:
+	@echo "resolve"
 	@ ../usr/bin/snow-ticket-resolve $(INCIDENT) 'testing'
 
 ticket-reopen:
+	@echo "reopen"
 	@ ../usr/bin/snow-ticket-reopen $(INCIDENT)
 
 ticket-all: ticket-new ticket-list ticket ticket-journal ticket-assign ticket-unassign ticket-resolve ticket-reopen
 
-
 ritm-new:
 	@echo "Testing" | ../usr/bin/snow-ticket-create --subject testing \
-		--type ritm --group ECF-CIS --ticket new-cis-ritm.yaml --debug
+		--type ritm --group $(GROUP) --ticket new-cis-ritm.yaml --debug
 
 ritm-list:
-	@ ../usr/bin/snow-ticket-list --group ECF-CIS --type ritm
+	@ ../usr/bin/snow-ticket-list --group $(GROUP) --type ritm
