--- a/t/new-cis-ritm.yaml
+++ b/t/new-cis-ritm.yaml
@@ -1,6 +1,6 @@
 ## This ticket is a good start for creating tickets for the CIS team.
 
 ticket:
-    assignment_group:       'ECF-CIS'
-    group:                  'ECF-CIS'
+    assignment_group:       'SSI Internal'
+    group:                  'SSI Internal'
     short_description:      '(no subject)'
